--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.10.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "luxon": "^3.7.1",
     "mapbox-gl": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
